--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -372,7 +372,7 @@ input::placeholder, input:focus::placeholder {
         line-height: 2rem
     }
 
-    input::placeholder, input:autofill, input:focus::placeholder, select:autofill, textarea:autofill {
+    input::placeholder, input:-webkit-autofill, input:focus::placeholder, select:-webkit-autofill, textarea:-webkit-autofill {
         font-size: 1.2rem;
         font-weight: 400;
         line-height: 2rem
@@ -390,7 +390,7 @@ input::placeholder, input:focus::placeholder {
         line-height: .834vw
     }
 
-    input::placeholder, input:autofill, input:focus::placeholder, select:autofill, textarea:autofill {
+    input::placeholder, input:-webkit-autofill, input:focus::placeholder, select:-webkit-autofill, textarea:-webkit-autofill {
         font-size: .5004vw;
         line-height: .834vw
     }
@@ -441,7 +441,7 @@ html footer.block.page-footer {
 }
 
 .page-footer .upper .logo .logo-viaplay {
-    background-image: url(resources/footer_logo-b733b3ac36465f82.png);
+    background-image: url('/footer_logo-b733b3ac36465f82.png');
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: contain;
