--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -255,28 +255,166 @@
                         </section>
                     </div>
 
-                    <div class="Carousel-module-container-o-YFo">
-
-                        <!-- Pętla generująca pozycje dla różnych gatunków -->
-                        <th:block th:each="category : ${categories}">
-                            <div th:replace="templates/header :: header(${categoryName}, ${categoryLink})"></div>
-
-                            <div class="Carousel-module-carousel-NbPjL" th:id="carousel-${category.id}">
-                                <div class="Carousel-module-wrapper-QhccC">
-                                    <button class="Carousel-module-navigation-crAaj Carousel-module-prev-EJuzt Carousel-module-disabled-vHRrb"></button>
-                                    <div class="Carousel-module-inner-4oa8u Carousel-module-useTransition-vWyzl"
-                                         th:style="'transform: translateX(' + ${category.transformX} + 'px);'">
-                                        <div style="display: block;">
-                                            <th:block th:each="item : ${category.items}">
-                                                <!-- Użycie komponentu Thymeleaf dla elementu filmu -->
-                                                <div th:replace="templates/media :: media(${item.productId}, ${item.imageUrl}, ${item.mediaLink})"></div>
-                                            </th:block>
+                    <!--                   MOVIE PROMOBOX-->
+                    <div style="display: block;">
+                        <div class="CarouselHeader-module-container-dBOIV">
+                            <section itemtype="">
+                                <div class="Scaffold-module-scaffold-F6aIC">
+                                    <header class="CarouselHeader-module-wrapper-B8ict">
+                                        <h2 class="Title-module-subheader--ZDhF" th:text="${moviePromoBoxMainTitle}">
+                                            Series PromoBox title
+                                        </h2>
+                                    </header>
+                                </div>
+                            </section>
+                        </div>
+                        <section>
+                            <div class="Scaffold-module-scaffold-F6aIC">
+                                <div class="MosaicLite-module-container-kmYfB MosaicLite-module-block5-iSivd">
+                                    <div th:each="promoItem : ${moviePromoBox}"
+                                         class="Item-module-item-yTZtG
+                                        Item-module-carouselItem-Q3n9V
+                                        Item-module-landscapeItem-Sf-nw
+                                        Item-module-mosaicGridItem-XKjcG"
+                                         th:id="'series-' + ${promoItem.imdbId}"
+                                         th:data-product-id="${promoItem.imdbId}">
+                                        <div class="Item-module-box-4uBp3">
+                                            <a class="Item-module-link-Lms-C"
+                                               tabindex="-1"
+                                               th:with="formattedTitle=${promoItem.title.replace(' ', '-')}"
+                                               th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">
+                                                <div class="Item-module-image-CGday"
+                                                     th:style="'background-image: url(' + ${promoItem.imageUrl} + ');'">
+                                                </div>
+                                            </a>
                                         </div>
+                                        <div class="Item-module-below-BMw6u Item-module-padding-kgN3F"></div>
                                     </div>
-                                    <button class="Carousel-module-navigation-crAaj Carousel-module-next-AXbEv"></button>
                                 </div>
                             </div>
-                        </th:block>
+                        </section>
+                    </div>
+
+
+                    <div class="Carousel-module-container-o-YFo" data-testhook="carousel-container">
+                        <div id="header-seriale-dramatyczne"
+                             class="CarouselHeader-module-container-dBOIV"
+                        data-testhook="carousel-header">
+                            <!--                             th:id="'header-' + ${comedySeries.get(1).getGenre().replace(' ', '-').toLowerCase()}"-->
+                            <section itemtype="">
+                                <div class="Scaffold-module-scaffold-F6aIC">
+                                    <header class="CarouselHeader-module-wrapper-B8ict">
+                                        <h2 class="Title-module-subheader--ZDhF Title-module-hasSeeMore-DEdTE"
+                                            data-testhook="carousel-title">
+<!--                                            th:text="${comedySeries.get(1).getGenre().replace(' ', '-').toLowerCase()}">-->
+                                            Seriale dramatyczne
+                                        </h2>
+                                        <a class="Title-module-seeMore-f3FXj"
+                                           data-testhook="carousel-see-more"
+                                           href="/series/drama">
+<!--                                            th:href="series/${comedySeries.get(1).getGenre().replace(' ', '-').toLowerCase()}">-->
+                                            Pokaż wszystko
+                                        </a>
+                                    </header>
+                                </div>
+                            </section>
+                        </div>
+
+                        <div data-testhook="carousel" class="Carousel-module-carousel-NbPjL"
+                             id="seriale-dramatyczne">
+<!--                             th:id="${comedySeries.get(1).getGenre().replace(' ', '-').toLowerCase()}">-->
+                            <div class="Carousel-module-wrapper-QhccC">
+                                <button class="Carousel-module-navigation-crAaj
+                                        Carousel-module-prev-EJuzt
+                                        Carousel-module-disabled-vHRrb"
+                                        data-testhook="carousel-prev-arrow-disabled">
+                                </button>
+                                <div class="Carousel-module-inner-4oa8u Carousel-module-useTransition-vWyzl"
+                                     style="transform: translateX(0px);">
+                                    <div style="display: block;">
+                                        <span>
+                                        <div th:each="seriesModel : ${comedySeries}"
+                                      class="Item-module-item-yTZtG
+                                        Item-module-carouselItem-Q3n9V
+                                        Item-module-landscapeItem-Sf-nw" data-testhook="item"
+                                             id="series-mary-kills-people-533de7c2-f10a-4289-84e1-eec7f147c0e0"\
+                                             th:id="${seriesModel.getTitle().replace(' ', '-').toLowerCase()}"
+                                             data-product-id="series-mary-kills-people"
+                                        th:data-product-id="${seriesModel.getTitle().replace(' ', '-').toLowerCase()}">
+                                            <div class="Item-module-box-4uBp3" data-testhook="series-item">
+                                                <a class="Item-module-link-Lms-C" data-testhook="item-product-page-link" tabindex="-1"
+                                                   th:href="@{/series/{seriesId}(seriesId=${seriesModel.getTitle().replace(' ', '-').toLowerCase()})}"
+                                                   href="/series/mary-kills-people">
+                                                </a>
+                                                <div class="Item-module-image-CGday"
+                                                     style="background-image: url(&quot;https://i-viaplay-com.akamaized.net/viaplay-prod/166/228/1692257738-4a3bed53cb4d0104ccc2f6de36dd6f87745536bb.jpg?width=448&amp;height=252&quot;);"
+                                                     th:style="'background-image: url(' + ${seriesModel.getImdbUrl()} + ');'"></div>
+                                                <a class="Item-module-link-Lms-C"
+                                                   data-testhook="item-product-page-link" tabindex="0"
+                                                   href="/series/mary-kills-people"
+                                                   th:href="@{/series/{seriesId}(seriesId=${seriesModel.getTitle().replace(' ', '-').toLowerCase()})}">
+                                                    <div class="PlayButton-module-container-RmQKd PlayButton-module-landscape-dCM5E"
+                                                         data-testhook="play-button" tabindex="-1">
+                                                        <figure class="PlayButton-module-icon-q3WfE"></figure>
+                                                    </div>
+                                                </a>
+                                                <div class="Item-module-curtain-EV2Ya">
+                                                    <div class="SeriesMeta-module-container-oFAL3 SeriesMeta-module-hasDefaultTypography-0GpSK" data-testhook="series-meta-first">
+                                                        <div class="SeriesMeta-module-metadata-8qwss">
+                                                            <span class="Divider-module-divider-U-3-- Divider-module-hasDefaultTypography-Uy4EO">
+                                                                <a data-tracking-click="IMDB" data-testhook="imdb-link"
+                                                                   class="ImdbRating-module-link-yYfI- ImdbRating-module-hasDefaultTypography-luAjW"
+                                                                   href="http://www.imdb.com/title/tt6236572?ref_ext_viaplay"
+                                                                   th:href="@{${seriesModel.getImageUrl()}}"
+                                                                   target="_blank" rel="noopener noreferrer nofollow"
+                                                                   tabindex="-1"
+                                                                    th:text="${seriesModel.getImdbRating()}">
+                                                                    7.5
+                                                                </a>
+                                                            </span>
+                                                            <span class="Divider-module-divider-U-3-- Divider-module-hasDefaultTypography-Uy4EO">
+                                                                <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96"
+                                                                      data-testhook="series-meta-seasons">
+                                                                    <span th:text="${seriesModel.getSeasonsCount()} + ' ' + (seriesModel.getSeasonsCount() == 1 ? 'Sezon' : 'Sezony')">
+                                                                     5 Sezony</span>
+                                                                </span>
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="InteractionIcons-module-container-apGgr"
+                                                         data-testhook="item-interaction-icons">
+                                                        <a class="TooltipButton-module-container-PfKnw TooltipButton-module-isItem-R6NdL"
+                                                           data-testhook="item-info"
+                                                           data-identifier="series-mary-kills-people-533de7c2-f10a-4289-84e1-eec7f147c0e0"
+                                                           tabindex="-1"
+                                                           href="/series/mary-kills-people"
+                                                           th:href="@{/series/{seriesId}(seriesId=${seriesModel.getTitle().replace(' ', '-').toLowerCase()})}">
+                                                        </a>
+                                                        <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"
+                                                             data-testhook="item-star">
+                                                        </div>
+                                                        <div class="RateButtons-module-container-oL7lm
+                                                        RateButtons-module-isItem-5vKa8
+                                                        RateButtons-module-rateUp-S4se-"
+                                                             data-testhook="item-rating-up">
+                                                        </div>
+                                                        <div class="RateButtons-module-container-oL7lm
+                                                        RateButtons-module-isItem-5vKa8
+                                                        RateButtons-module-rateDown-DblB1"
+                                                             data-testhook="item-rating-down">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="Item-module-below-BMw6u Item-module-padding-kgN3F"></div>
+                                        </div>
+                                        </span>
+                                    </div>
+                                    <button class="Carousel-module-navigation-crAaj Carousel-module-next-AXbEv"
+                                            data-testhook="carousel-next-arrow"></button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
