--- a/src/main/resources/templates/promo-box.html
+++ b/src/main/resources/templates/promo-box.html
@@ -1,9 +1,10 @@
+<!-- templates/promo-box.html -->
 <div style="display: block;">
   <div class="CarouselHeader-module-container-dBOIV">
     <section itemtype="">
       <div class="Scaffold-module-scaffold-F6aIC">
         <header class="CarouselHeader-module-wrapper-B8ict">
-          <h2 class="Title-module-subheader--ZDhF" th:text="${seriesPromoBoxMainTitle}">
+          <h2 class="Title-module-subheader--ZDhF" th:text="${sectionTitle}">
             Series PromoBox title
           </h2>
         </header>
@@ -13,20 +14,20 @@
   <section>
     <div class="Scaffold-module-scaffold-F6aIC">
       <div class="MosaicLite-module-container-kmYfB MosaicLite-module-block5-iSivd">
-        <div th:each="promoItem : ${seriesPromoBox}"
+        <div th:each="promoItem : ${items}"
+             th:id="${sectionType + '-' + promoItem.imdbId}"
+             th:data-product-id="${promoItem.imdbId}"
              class="Item-module-item-yTZtG
-             Item-module-carouselItem-Q3n9V
-             Item-module-landscapeItem-Sf-nw
-             Item-module-mosaicGridItem-XKjcG"
-             th:id="'series-' + ${promoItem.imdbId}"
-             th:data-product-id="${promoItem.imdbId}">
+                            Item-module-carouselItem-Q3n9V
+                            Item-module-landscapeItem-Sf-nw
+                            Item-module-mosaicGridItem-XKjcG">
           <div class="Item-module-box-4uBp3">
             <a class="Item-module-link-Lms-C"
                tabindex="-1"
                th:with="formattedTitle=${promoItem.title.replace(' ', '-')}"
-               th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} ">
+               th:href="@{${sectionLink}+'/'+${formattedTitle}(formattedTitle=${formattedTitle})}">
               <div class="Item-module-image-CGday"
-                   th:style="'background-image: url('' + ${promoItem.imageUrl} + '');'">
+                   th:style="'background-image: url(' + ${promoItem.imageUrl} + ');'">
               </div>
             </a>
           </div>
